# gmail-pubsub

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  PRD.md  README.md  main.py  pyproject.toml  requirements.txt
app/: dummy_data.py  models.py  process_email.py  utils.py
scripts/: cleanup.py  deploy.py  init.py  reset.py  test.py  utils.py
src/: config.py  database.py  gmail_handler.py  process_email.py  watch_manager.py
src/utils/: email_utils.py  logger.py  telegram_utils.py
